# fr-musp

./: CMakeLists.txt  README.md
include/fr_musp/binary_sequence/: binary_sequence.h
include/fr_musp/envelope/: constant.h  envelope_chain.h  envelope_segment.h  exponential_fall.h  exponential_rise.h  ienvelope.h  inverted_ramp.h  inverted_triangle.h  logarithmic_fall.h  logarithmic_rise.h  operator_based_iterator.h  pulse.h  ramp.h  triangle.h
include/fr_musp/granular/: grain.h  grain_builder.h
include/fr_musp/pink_noise/: pink_noise.h
include/fr_musp/white_noise/: white_noise.h
include/fr_musp/window_functions/: rectangular.h  triangular.h
src/: CMakeLists.txt
src/granular/: grain.cpp
src/white_noise/: white_noise.cpp
tests/: CMakeLists.txt
tests/binary_sequence/: binary_sequence_tests.cpp
tests/envelope/: constant_tests.cpp  envelope_chain_tests.cpp  envelope_segment_tests.cpp  exponential_fall_tests.cpp  exponential_rise_tests.cpp  inverted_ramp_tests.cpp  inverted_triangle_tests.cpp  logarithmic_fall_tests.cpp  logarithmic_rise_tests.cpp  operator_based_iterator_tests.cpp  pulse_tests.cpp  ramp_tests.cpp  triangle_tests.cpp
tests/granular/: grain_builder_tests.cpp  grain_tests.cpp
tests/pink_noise/: pink_noise_tests.cpp
tests/white_noise/: white_noise_tests.cpp
tests/window_functions/: rectangle_tests.cpp  triangular_tests.cpp
